--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            Hello my name is Tejas Wakchaure
+            Hello my name is Tejas Pradip Wakchaure
         </h1>
     </body>
 </html>
